  was added.



3.0.1: (released 2014-xx-xx)
----------------------------

All:

- Fix wxMBConvUTF8::ToWChar() for non-NUL-terminated strings (andyr).
- Fix wxSocket::WaitForAccept() in non-main thread (Hajo Kirchhoff).
- Fix memory overallocation in wxVector::reserve() (Nigel Paton).
- Fix `wx-config --libs` in monolithic build.
- Fix the build under HP-UX (tested under 11.31).
- Add Aragonese translation.

All (GUI):

- Fix crash when setting invalid label ending with "&" (ZaneUJi).
- Fix wxEditableListBox user data corruption when exchanging items
  in 64 bit builds (Tom Mettam, Rapid2D).
- Fix wxCommandProcessor::IsDirty() return value which was wrong after undoing
  all commands without saving (Neil Chittenden).
- Fix crash when Destroy()-ing a TLW with non-TLW parent.
- Fix crash in wxAuiToolBar::GetToolBarFits().
- Make wxFILTER_INCLUDE_LIST in wxTextValidator actually usable.
- Make wxHTML more efficient when displaying large tables (Kinaou Hervé).
- Prevent wxGrid rows/columns from becoming too small on double click.
- Fix wxGraphicsBitmap::ConvertToImage() when using Cairo.
- Support loading ICO files with data in PNG format (Artur Wieczorek).

wxGTK:

- Fix mouse wheel scrolling in wxListCtrl broken just before 3.0.0.
- Fix memory leak in wxSocket.
- Fix raw access to wxBitmap pixels after drawing on it using wxMemoryDC.
- Fix setting font and colours of wxToggleButtons with images.
- Fix wxPopupTransientWindow mouse events with GTK3,
  also fixes wxOwnerDrawnComboBox, wxDatePickerCtrl.
- Fix cursor inheritance.
- Fix wxStaticBoxSizer size calculation.
- Fix AUI panel re-docking.
- Add support for wxDD_DIR_MUST_EXIST to wxDirDialog.
- Fix handling of the accelerators for sub menu items (Chaobin Zhang).
- Fix disappearing mouse clicks when using wxTreeCtrl.
- Fix calls to Move{Before,After}InTabOrder() after parent window creation.

wxMSW:

- Disable the use of compiler TLS to avoid mysterious crashes in plugins.